# dot-files

./: .tmux.conf  .vimrc  .zshrc  .zshrc_history  CMakeLists.txt  Untitled Diagram.xml  backup_env.py  beautify.sh  collect.sh  deliver.sh  init.vim
